--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           scheme: OpenAIBar
         run: |
-          xcodebuild clean build analyze -scheme "$scheme" | xcpretty && exit ${PIPESTATUS[0]}
+          xcodebuild clean build analyze
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
